Fixes alignment issue with .upload-category-row label.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1070,6 +1070,7 @@ footer {
 
 .upload-category-row label {
   font-weight: bold;
+  margin-top: 0;
 }
 
 .library-section {
